First-View: Update z-index to fix FF/IE display issues (#6871)

--- a/client/components/first-view/style.scss
+++ b/client/components/first-view/style.scss
@@ -26,6 +26,7 @@
 		bottom: 0;
 		top: 0;
 	width: 100%;
+	z-index: z-index( 'root', '.first-view' );
 
 	&.is-visible {
 		.first-view__content {
